# budgie-nes

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  nes.c  nes.h
src/helpers/: bit_fields.c  bit_fields.h  io.c  io.h
src/vm/: apu.c  apu.h  cpu.c  cpu.h  ppu.c  ppu.h  rom.c  rom.h
